compatibility changes for api 17

--- a/app/src/main/res/layout/card_about_app.xml
+++ b/app/src/main/res/layout/card_about_app.xml
@@ -52,7 +52,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:tint="?android:attr/textColorPrimary"
+                app:tint="?android:attr/textColorPrimary"
                 app:srcCompat="@drawable/ic_info_outline_black_24dp"
                 tools:ignore="ContentDescription,UnusedAttribute" />
 
@@ -97,7 +97,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:tint="?android:attr/textColorPrimary"
+                app:tint="?android:attr/textColorPrimary"
                 app:srcCompat="@drawable/ic_share_white_24dp"
                 tools:ignore="ContentDescription,UnusedAttribute" />
 
@@ -128,7 +128,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:tint="?android:attr/textColorPrimary"
+                app:tint="?android:attr/textColorPrimary"
                 app:srcCompat="@drawable/ic_restore_white_24dp"
                 tools:ignore="ContentDescription,UnusedAttribute" />
 
@@ -161,7 +161,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:tint="?android:attr/textColorPrimary"
+                app:tint="?android:attr/textColorPrimary"
                 app:srcCompat="@drawable/ic_assignment_turned_in_white_24dp"
                 tools:ignore="ContentDescription,UnusedAttribute" />
 
@@ -194,7 +194,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:tint="?android:attr/textColorPrimary"
+                app:tint="?android:attr/textColorPrimary"
                 app:srcCompat="@drawable/ic_gitlab"
                 tools:ignore="ContentDescription,UnusedAttribute" />
 
