--- a/app/src/main/res/layout/widget_substitution.xml
+++ b/app/src/main/res/layout/widget_substitution.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/widget_substitution_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,7 +19,8 @@
         android:layout_gravity="end"
         android:contentDescription="@string/action_refresh"
         android:scaleType="fitCenter"
-        android:src="@drawable/ic_refresh_black_24dp" />
+
+        app:srcCompat="@drawable/ic_refresh_black_24dp" />
 
     <ImageButton
         android:id="@+id/widget_substitution_open_button"
@@ -27,8 +29,9 @@
         android:layout_gravity="start"
         android:contentDescription="@string/open_app"
         android:scaleType="fitCenter"
-        android:src="@drawable/ic_open_in_browser_white_24dp"
-        android:visibility="gone" />
+
+        android:visibility="gone"
+        app:srcCompat="@drawable/ic_open_in_browser_white_24dp" />
 
     <TextView
         android:id="@+id/widget_substiution_loading"
