--- a/app/src/main/res/layout/widget_summary.xml
+++ b/app/src/main/res/layout/widget_summary.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/widget_summary_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,8 +14,9 @@
         android:layout_gravity="center_horizontal"
         android:layout_weight="2"
         android:contentDescription="@string/set_substitution_category"
-        android:src="@drawable/ic_stat_assignment_late"
-        android:tint="@color/colorWidgetForeground" />
+
+        app:srcCompat="@drawable/ic_stat_assignment_late"
+        app:tint="@color/colorWidgetForeground" />
 
     <TextView
         android:id="@+id/widget_summary_count"
