--- a/app/src/main/res/xml/summary_widget_info.xml
+++ b/app/src/main/res/xml/summary_widget_info.xml
@@ -6,4 +6,4 @@
     android:minHeight="40dp"
     android:previewImage="@drawable/summary_widget_preview"
     android:updatePeriodMillis="86400000"
-    android:widgetCategory="home_screen"></appwidget-provider>
+    android:widgetCategory="home_screen" />
