--- a/app/src/main/res/xml/preferences_hide_menu_items.xml
+++ b/app/src/main/res/xml/preferences_hide_menu_items.xml
@@ -5,7 +5,7 @@
         android:defaultValue="true"
         android:key="menu_both"
         android:summary="@string/set_desc_both"
-        android:title="@string/menu_both"
+        android:title="@string/menu_at_one_glance"
         app:iconSpaceReserved="false" />
     <SwitchPreference
         android:defaultValue="true"
