--- a/app/src/main/res/menu/substitution_fragment_course_menu.xml
+++ b/app/src/main/res/menu/substitution_fragment_course_menu.xml
@@ -2,5 +2,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/action_add_course"
-        android:title="Zu deinen Kursen hinzufügen" />
+        android:title="@string/add_to_my_courses" />
 </menu>
