--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -5,6 +5,8 @@
         versioncode="113">
         <change>Neue Menüeinträge für einzelne Tage hinzugefügt</change>
         <change>Neue Widgets hinzugefügt</change>
+        <change>Klassen/Kurse im ungefilterten Plan per Klick darauf zu deinen Kursen hinzufügen
+        </change>
         <change>Schülerzeitung hinzugefügt</change>
         <change>Routennavigation hinzugefügt</change>
         <change>Einstellung zum Verbergen von Menü-Einträgen hinzugefügt</change>
