added remove pop up

--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -7,6 +7,7 @@
         <change>Neue Widgets hinzugefügt</change>
         <change>Klassen/Kurse im ungefilterten Plan per Klick darauf zu deinen Kursen hinzufügen
         </change>
+        <change>Und im gefilterten Plan per Klick entfernen</change>
         <change>Schülerzeitung hinzugefügt</change>
         <change>Routennavigation hinzugefügt</change>
         <change>Einstellung zum Verbergen von Menü-Einträgen hinzugefügt</change>
