--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -3,18 +3,19 @@
     <release
         version="1.1.3"
         versioncode="113">
-        <change>Neue Menüeinträge für einzelne Tage hinzugefügt</change>
         <change>Neue Widgets hinzugefügt</change>
         <change>Klassen/Kurse im ungefilterten Plan per Klick darauf zu deinen Kursen hinzufügen
         </change>
         <change>Und im gefilterten Plan per Klick entfernen</change>
+        <change>Neue Menüeinträge für einzelne Tage hinzugefügt</change>
         <change>Schülerzeitung hinzugefügt</change>
         <change>Routennavigation hinzugefügt</change>
         <change>Einstellung zum Verbergen von Menü-Einträgen hinzugefügt</change>
-        <change>Neues Design verfollständigt</change>
+        <change>Neues Design vervollständigt</change>
         <change>Individulalisierbares Design (-> Einstellungen)</change>
         <change>Vergrößerbare Bilder auf der Homepage</change>
         <change>Beschreibungen der Einstellungen hinzugefügt</change>
+        <change>Intelligentes Ausblenden bei "Auf einen Blick!"</change>
         <change>Neue Screenshots in ColoRush</change>
         <change>Neue Teilen-Nachricht</change>
     </release>
