--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <changelog>
     <release
+        version="1.2.0"
+        versioncode="120">
+        <change>Startbildschirm-Shortcuts hinzugefügt</change>
+    </release>
+    <release
         version="1.1.3"
         versioncode="113">
         <change>Neue Widgets hinzugefügt</change>
