--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -4,6 +4,7 @@
         version="1.2.0"
         versioncode="120">
         <change>Startbildschirm-Shortcuts hinzugefügt</change>
+        <change>Herunterwischen zum Aktualisieren (nur beim ungefilterten Plan)</change>
     </release>
     <release
         version="1.1.3"
