--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -46,6 +46,6 @@
     <color name="notification_icon_text_omitted">@android:color/white</color>
     <color name="notification_icon_text_substitution">@android:color/white</color>
     <color name="notification_icon_background_omitted">#FF0000</color>
-    <color name="notification_icon_background_substitution">#FFEB3B</color>
+    <color name="notification_icon_background_substitution">#FFFF00</color>
     <color name="notification_icon_nothing_background">#3AC540</color>
 </resources>
