fixed alarm manager

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -43,9 +43,10 @@
     <color name="nothing_background_light">#99FF0000</color>
 
     <!-- Notification -->
-    <color name="notification_icon_text_omitted">@android:color/white</color>
-    <color name="notification_icon_text_substitution">@android:color/white</color>
-    <color name="notification_icon_background_omitted">#FF0000</color>
-    <color name="notification_icon_background_substitution">#FFFF00</color>
+    <color name="notification_icon_text_omitted">@android:color/black</color>
+    <color name="notification_icon_background_omitted">#BAFF0000</color>
+    <color name="notification_icon_text_substitution">#525252</color>
+    <color name="notification_icon_background_substitution">#fbdd0d</color>
+    <!--  FFC93E fbdd0d  -->
     <color name="notification_icon_nothing_background">#3AC540</color>
 </resources>
