--- a/app/src/main/res/xml/preferences_design.xml
+++ b/app/src/main/res/xml/preferences_design.xml
@@ -60,7 +60,7 @@
             android:title="@string/set_swipe_to_refresh"
             app:iconSpaceReserved="false" />
         <SwitchPreference
-            android:defaultValue="false"
+            android:defaultValue="true"
             android:key="swipe_to_refresh_filtered"
             android:title="@string/set_at_filtered_plan"
             app:iconSpaceReserved="true" />
