--- a/app/src/main/res/menu/activity_drawer_main.xml
+++ b/app/src/main/res/menu/activity_drawer_main.xml
@@ -48,7 +48,7 @@
                     android:title="@string/menu_news" />
                 <item
                     android:id="@+id/nav_forms"
-                    android:icon="@drawable/ic_assignment_late"
+                    android:icon="@drawable/ic_consent"
                     android:title="@string/menu_forms" />
                 <item
                     android:id="@+id/nav_teacherlist"
@@ -60,7 +60,7 @@
                     android:title="@string/menu_mebis" />
                 <item
                     android:id="@+id/nav_claxss"
-                    android:icon="@drawable/ic_domain"
+                    android:icon="@drawable/ic_internet"
                     android:title="@string/menu_claxss" />
                 <item
                     android:id="@+id/nav_mensa"
