--- a/app/src/main/res/layout/content_sign_in.xml
+++ b/app/src/main/res/layout/content_sign_in.xml
@@ -37,12 +37,24 @@
             android:gravity="center"
             android:text="@string/subtitle" />
 
+        <CheckBox
+            android:id="@+id/auto_update_check_box"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:checked="true"
+            android:gravity="center"
+            android:text="Automatisch auf Updates prüfen"
+            android:textColor="?android:attr/textColorSecondary" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="45dp"
+            android:layout_marginTop="35dp"
             android:gravity="center"
-            android:text="@string/login_description" />
+            android:text="@string/login_description"
+            android:textColor="?android:attr/textColorPrimary" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -104,7 +116,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/please_wait"
-                android:textColor="@android:color/black"
+                android:textColor="?android:attr/textColorPrimary"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
