--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -6,6 +6,7 @@
         <change>Neue Benachrichtigung (und passende Einstellungen)</change>
         <change>Startbildschirm-Shortcuts hinzugefügt</change>
         <change>Herunterwischen zum Aktualisieren</change>
+        <change>Einstellung für den automatischen Update-Check hinzugefügt</change>
     </release>
     <release
         version="1.1.3"
