--- a/app/src/main/res/menu/activity_drawer_main.xml
+++ b/app/src/main/res/menu/activity_drawer_main.xml
@@ -96,7 +96,7 @@
                     android:title="@string/menu_colorush" />
                 <item
                     android:id="@+id/nav_grades"
-                    android:icon="@drawable/ic_looks_one_black_24dp"
+                    android:icon="@drawable/ic_exam"
                     android:title="@string/menu_grades" />
             </group>
         </menu>
