--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
     <shortcut
-        android:shortcutId="visit_website"
         android:enabled="true"
         android:icon="@drawable/ic_compass"
+        android:shortcutId="visit_website"
         android:shortcutShortLabel="@string/shortcut_website">
         <intent
             android:action="none"
@@ -11,9 +11,40 @@
             android:targetPackage="com.asdoi.gymwen" />
     </shortcut>
     <shortcut
-        android:shortcutId="navigation"
         android:enabled="true"
+        android:icon="@drawable/ic_graduate_cap"
+        android:shortcutId="mebis"
+        android:shortcutShortLabel="@string/shortcut_mebis">
+        <intent
+            android:action="com.asdoi.gymwen.ui.activities.MainActivity.Mebis"
+            android:targetClass="com.asdoi.gymwen.ui.activities.MainActivity"
+            android:targetPackage="com.asdoi.gymwen" />
+    </shortcut>
+    <shortcut
+        android:enabled="true"
+        android:icon="@drawable/ic_restaurant"
+        android:shortcutId="mensa"
+        android:shortcutShortLabel="@string/shortcut_mensa">
+        <intent
+            android:action="com.asdoi.gymwen.ui.activities.MainActivity.Mensa"
+            android:targetClass="com.asdoi.gymwen.ui.activities.MainActivity"
+            android:targetPackage="com.asdoi.gymwen" />
+    </shortcut>
+    <!--    Not working in Main Acivity-->
+    <shortcut
+        android:enabled="false"
+        android:icon="@drawable/ic_teacher_at_the_blackboard"
+        android:shortcutId="teacher_list"
+        android:shortcutShortLabel="@string/shortcut_teacher_list">
+        <intent
+            android:action="com.asdoi.gymwen.ui.activities.MainActivity.TeacherList"
+            android:targetClass="com.asdoi.gymwen.ui.activities.MainActivity"
+            android:targetPackage="com.asdoi.gymwen" />
+    </shortcut>
+    <shortcut
+        android:enabled="false"
         android:icon="@drawable/ic_navigation_black_24dp"
+        android:shortcutId="navigation"
         android:shortcutShortLabel="@string/shortcut_navigation">
         <intent
             android:action="com.asdoi.gymwen.ui.activities.MainActivity.Navigation"
@@ -21,9 +52,9 @@
             android:targetPackage="com.asdoi.gymwen" />
     </shortcut>
     <shortcut
-        android:shortcutId="call_office"
-        android:enabled="true"
+        android:enabled="false"
         android:icon="@drawable/ic_call_black_24dp"
+        android:shortcutId="call_office"
         android:shortcutShortLabel="@string/shortcut_call_office">
         <intent
             android:action="com.asdoi.gymwen.ui.activities.MainActivity.CallOffice"
@@ -31,9 +62,9 @@
             android:targetPackage="com.asdoi.gymwen" />
     </shortcut>
     <shortcut
-        android:shortcutId="news"
-        android:enabled="true"
+        android:enabled="false"
         android:icon="@drawable/ic_news"
+        android:shortcutId="news"
         android:shortcutShortLabel="@string/shortcut_newspaper">
         <intent
             android:action="com.asdoi.gymwen.ui.activities.MainActivity.News"
