--- a/app/src/main/res/layout/card_support_development.xml
+++ b/app/src/main/res/layout/card_support_development.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:clickable="true"
             android:focusable="true"
-            android:foreground="?android:attr/selectableItemBackground"
+            android:foreground="?attr/selectableItemBackground"
             android:gravity="center_vertical"
             android:minHeight="@dimen/about_listitem_height"
             android:orientation="horizontal"
