--- a/app/src/main/res/layout/card_author.xml
+++ b/app/src/main/res/layout/card_author.xml
@@ -69,7 +69,7 @@
             android:layout_height="wrap_content"
 
             android:clickable="true"
-            android:foreground="?android:attr/selectableItemBackground"
+            android:foreground="?attr/selectableItemBackground"
             android:focusable="true"
             android:minHeight="@dimen/about_listitem_height"
             android:gravity="center_vertical"
@@ -103,7 +103,7 @@
 
             android:minHeight="@dimen/about_listitem_height"
             android:clickable="true"
-            android:foreground="?android:attr/selectableItemBackground"
+            android:foreground="?attr/selectableItemBackground"
             android:focusable="true"
             android:gravity="center_vertical"
 
@@ -137,7 +137,7 @@
             android:minHeight="@dimen/about_listitem_height"
             android:focusable="true"
             android:clickable="true"
-            android:foreground="?android:attr/selectableItemBackground"
+            android:foreground="?attr/selectableItemBackground"
             android:gravity="center_vertical"
 
             android:orientation="horizontal"
