--- a/app/src/main/res/layout/content_sign_in.xml
+++ b/app/src/main/res/layout/content_sign_in.xml
@@ -37,16 +37,31 @@
             android:gravity="center"
             android:text="@string/subtitle" />
 
-        <CheckBox
-            android:id="@+id/auto_update_check_box"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:checked="true"
             android:gravity="center"
-            android:text="Automatisch auf Updates prüfen"
-            android:textColor="?android:attr/textColorSecondary" />
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/signin_auto_update_check_box"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:checked="true"
+                android:gravity="center"
+                android:text="Automatisch auf Updates prüfen"
+                android:textColor="?android:attr/textColorSecondary"
+                android:layout_marginEnd="15dp" />
+
+            <Button
+                android:id="@+id/signin_url_settings_button"
+                style="@style/Widget.AppCompat.Button.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="URL" />
+        </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
