--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -7,6 +7,7 @@
         <change>Startbildschirm-Shortcuts hinzugefügt</change>
         <change>Herunterwischen zum Aktualisieren</change>
         <change>Einstellung für den automatischen Update-Check hinzugefügt</change>
+        <change>Neue Icons</change>
     </release>
     <release
         version="1.1.3"
