--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -30,7 +30,7 @@
             android:targetClass="com.asdoi.gymwen.ui.activities.MainActivity"
             android:targetPackage="com.asdoi.gymwen" />
     </shortcut>
-    <!--    Not working in Main Acivity-->
+    <!--    Not working, see Main Activity-->
     <shortcut
         android:enabled="false"
         android:icon="@drawable/ic_teacher_at_the_blackboard"
@@ -52,7 +52,7 @@
             android:targetPackage="com.asdoi.gymwen" />
     </shortcut>
     <shortcut
-        android:enabled="false"
+        android:enabled="true"
         android:icon="@drawable/ic_call_black_24dp"
         android:shortcutId="call_office"
         android:shortcutShortLabel="@string/shortcut_call_office">
