--- a/app/src/main/res/xml/preferences_hide_menu_items.xml
+++ b/app/src/main/res/xml/preferences_hide_menu_items.xml
@@ -72,6 +72,11 @@
         android:title="@string/menu_shop"
         app:iconSpaceReserved="false" />
     <SwitchPreference
+        android:defaultValue="false"
+        android:key="menu_podcast"
+        android:title="@string/menu_podcast"
+        app:iconSpaceReserved="false" />
+    <SwitchPreference
         android:defaultValue="true"
         android:key="menu_call_office"
         android:title="@string/menu_call_office"
