--- a/app/src/main/res/menu/activity_drawer_main.xml
+++ b/app/src/main/res/menu/activity_drawer_main.xml
@@ -60,10 +60,6 @@
                     android:icon="@drawable/ic_compass"
                     android:title="@string/menu_website" />
                 <item
-                    android:id="@+id/nav_news"
-                    android:icon="@drawable/ic_news"
-                    android:title="@string/menu_news" />
-                <item
                     android:id="@+id/nav_forms"
                     android:icon="@drawable/ic_consent"
                     android:title="@string/menu_forms" />
@@ -71,6 +67,10 @@
                     android:id="@+id/nav_teacherlist"
                     android:icon="@drawable/ic_teacher_at_the_blackboard"
                     android:title="@string/menu_teacher_list" />
+                <item
+                    android:id="@+id/nav_room_plan"
+                    android:icon="@drawable/ic_house_plan"
+                    android:title="@string/room_plan" />
                 <item
                     android:id="@+id/nav_mebis"
                     android:icon="@drawable/ic_graduate_cap"
@@ -83,6 +83,10 @@
                     android:id="@+id/nav_mensa"
                     android:icon="@drawable/ic_restaurant"
                     android:title="@string/menu_mensa" />
+                <item
+                    android:id="@+id/nav_news"
+                    android:icon="@drawable/ic_news"
+                    android:title="@string/menu_news" />
                 <item
                     android:id="@+id/nav_shop"
                     android:icon="@drawable/ic_t_shirt"
