--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -21,6 +21,7 @@
     <release
         version="1.2.0"
         versioncode="120">
+        <change>Raumplan hinzugefügt</change>
         <change>Neue Benachrichtigung (und passende Einstellungen)</change>
         <change>Startbildschirm-Shortcuts hinzugefügt</change>
         <change>Wendelsteiner Welle hinzugefügt (Deaktiviert -> Einstellungen)</change>
