--- a/app/src/main/res/layout/fragment_room_plan.xml
+++ b/app/src/main/res/layout/fragment_room_plan.xml
@@ -25,6 +25,12 @@
     <com.onlylemi.mapview.library.MapView
         android:id="@+id/mapview"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
+    <indoormaps.ninepatch.com.library.IndoorMapsView
+        android:id="@+id/indorMaps"
+        android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
 </FrameLayout>
