--- a/app/src/main/res/menu/menu_room_plan.xml
+++ b/app/src/main/res/menu/menu_room_plan.xml
@@ -21,9 +21,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.activities.RoomPlanActivity">
     <item
-        android:title="@string/action_search"
         android:id="@+id/action_room_search"
-        android:orderInCategory="100"
         android:icon="@drawable/ic_search_black_24dp"
+        android:orderInCategory="100"
+        android:title="@string/action_search"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_room_plan"
+        android:icon="@drawable/ic_house_plan"
+        android:orderInCategory="100"
+        android:title="@string/room_plan"
+        app:iconTint="@android:color/white"
         app:showAsAction="ifRoom" />
 </menu>
