--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -44,6 +44,7 @@
         <item>@string/shortcut_mensa</item>
         <item>@string/shortcut_grades_management</item>
         <item>@string/shortcut_call_office</item>
+        <item>@string/shortcut_room_plan</item>
         <item>@string/shortcut_navigation</item>
         <item>@string/shortcut_claxss</item>
         <item>@string/shortcut_forms</item>
@@ -57,6 +58,7 @@
         <item>mensa</item>
         <item>grades_management</item>
         <item>call_office</item>
+        <item>roomplan</item>
         <item>navigation</item>
         <item>claxss</item>
         <item>forms</item>
